# clh-client

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: renovate.json5
.github/workflows/: ci.yml  release-plz.yml  release.yml
shell/: clh.zsh  zsh.zsh
src/: add.rs  client.rs  config.rs  main.rs  models.rs  search.rs  setup.rs
