[package]
name = "clh"
version = "0.1.0"
edition = "2024"
description = "CLI client for clh-server — fuzzy search your command history"
license = "MIT"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = "4"
toml = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
