[package]
name = "clh-client"
version = "0.1.0"
edition = "2024"
description = "CLI client for clh-server — fuzzy search your command history"
license = "MIT"
repository = "https://github.com/okkez/clh-client"
keywords = ["cli", "history", "fuzzy", "shell"]
categories = ["command-line-utilities"]

[[bin]]
name = "clh"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/clh-v{ version }-{ target }.tar.gz"
bin-dir = "clh{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/clh-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = "4"
toml = "1"
crossterm = "0.29"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dev-dependencies]
mockito = "1"
tempfile = "3"

